--- a/projet/projet-web/src/main/webapp/connexion.xhtml
+++ b/projet/projet-web/src/main/webapp/connexion.xhtml
@@ -17,7 +17,7 @@
 		<table class="form">
 			<tr>
 				<td><label>Pseudo :</label></td>
-				<td><h:inputText size="15" value="#{modelConnexion.courant.pseudo}" /></td>
+				<td><h:inputText size="15" value="#{modelConnexion.courant.identifiant}" /></td>
 			</tr>
 			<tr>
 				<td><label>Mot de passe :</label></td>
