--- a/projet/projet-web/src/main/webapp/pages/user/utilisateur/formulaire.xhtml
+++ b/projet/projet-web/src/main/webapp/pages/user/utilisateur/formulaire.xhtml
@@ -74,7 +74,7 @@
 
 		<br /> 
 		<h:commandButton value="Valider" 
-			action="#{modelUtilisateur.validerMiseAJour()}" />
+			action="#{modelUtilisateur.}" />
 		<h:button value="Retour" outcome="comptes" />
 	</h:form>
 
