--- a/projet/projet-web/src/main/webapp/pages/admin/compte/liste.xhtml
+++ b/projet/projet-web/src/main/webapp/pages/admin/compte/liste.xhtml
@@ -5,28 +5,28 @@
      xmlns:ui="http://java.sun.com/jsf/facelets"
      template="/template/page-standard.xhtml" >
 
-     <ui:define name="titre">Liste des comptes</ui:define>
+     <ui:define name="titre">Liste des utilisateurs</ui:define>
 
     <ui:define name="contenu">
 
 	<h:form>
 
 		<h:dataTable styleClass="liste" 
-			value="#{modelCompte.liste}" var="item" 
+			value="#{modelUtilisateur.liste}" var="item" 
 			rowClasses="impair, pair" columnClasses="left,left,center"
 		>
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="Psudo" />
+					<h:outputText value="identifiant" />
 				</f:facet>
-				#{item.pseudo}
+				#{item.identifiant}
 			</h:column>
 			
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="Rôles" />
+					<h:outputText value="Rôle" />
 				</f:facet>
-				<ui:repeat value="#{item.roles}" var="role" varStatus="status" >
+				<ui:repeat value="#{item.role}" var="role" varStatus="status" >
 					#{utilAppli.getLibelléDeRole(role)}#{not status.last ? ', ' : ''}
 				</ui:repeat>
 			</h:column>
